KDH All links updated

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NexusHub - Premium Digital Solutions</title>
+    <title>KDH Innovations - Modern Growth, Simpified</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/assets/avatar.png" type="image/x-icon">
 </head>
 <body data-theme="dark">
     <div class="bg-animation"></div>
@@ -19,7 +19,7 @@
 
         <div class="profile">
             <div class="profile-avatar">
-                <image src="/assets/avatar.png" alt="KDH Logo" class="profile-picture">
+                <img src="/assets/avatar.png" alt="KDH Logo" class="profile-picture">
             </div>
 
             <h1 class="title">KDH INNOVATIONS</h1>
