--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KDH Innovations - Modern Growth, Simpified</title>
+    <title>KDH Innovations -ECOSYSTEM</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/assets/avatar.png" type="image/x-icon">
+    
+
+    <!-- Open Graph (Facebook / Telegram) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://kdh-innovation.netlify.app/" />
+    <meta property="og:title" content="K.D.H INNOVATIONS" />
+    <meta property="og:description" content="KDH Innovations - Modern Growth, Simpified" />
+    <meta property="og:image" content="https://i.postimg.cc/76wrwSdp/KdhEco.png" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://kdh-innovation.netlify.app/" />
+    <meta name="twitter:title" content="K.D.H INNOVATIONS" />
+    <meta name="twitter:description" content="KDH Innovations - Modern Growth, Simpified" />
+    <meta name="twitter:image" content="https://i.postimg.cc/76wrwSdp/KdhEco.png" />
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-RQXVZBKMM3"></script>
